# pixelfed-telegram-bridge

./: .gitignore  config.toml.example  main.py  pyproject.toml  requirements.txt
pixelfed_telegram_bridge/: __init__.py
